create swagger file and workingHours model
